fix align problem

--- a/EasyNote/wwwroot/css/login-register-form.css
+++ b/EasyNote/wwwroot/css/login-register-form.css
@@ -214,6 +214,11 @@
         }
 
 @media screen and (max-width: 500px){
+    .form-block {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
     .login-form-wrapper {
         flex-grow: 1;
     }
