--- a/EasyNote/wwwroot/css/profile.css
+++ b/EasyNote/wwwroot/css/profile.css
@@ -167,6 +167,7 @@ input {
         #image_upload_dialog form div {
             display: flex;
             width: 100%;
+            padding-bottom: 10px;
         }
 
 #file_input {
